# badminton-score

./: .gitignore  .~球队签到表.xlsx  QWEN.md  README.md  data.json  db.py  deploy.sh  import_scores.py  index.py  pyproject.toml  style.css  update_data.sh  vercel.json  部署指南.md  部署教程-vercel.md  部署教程.md
.qwen/: settings.json
api/: README-aliyun.md  aliyun-env.json  aliyun_web.py  import_from_json.py  import_to_aliyun.py  index.py  requirements.txt  s.yaml
api-vercel/: index.py  vercel.json
docs/: README.md  app.js  data.json  export_to_web.py  firebase-config.js  index.html  style.css
scores/: calculate_stats.py  paddleocr_vl.py  parse_old_format.py  verify_ocr.py  图表格式.md  统计需求.md  解析规则.md
scores/20260413/: 20260413.md  calculate_stats.py  calculate_stats_debug.py  match_data.json  排名统计.md  数据核对.md  深度分析报告.md
报名/: generate_jan.py  报名表_2026-01-05.xlsx  报名表_2026-01-12.xlsx  报名表_2026-01-19.xlsx  报名表_2026-01-26.xlsx  报名表_2026-02-02.xlsx  报名表_2026-02-09.xlsx  报名表_2026-02-16.xlsx  报名表_2026-02-23.xlsx  报名表_2026-03-02.xlsx  报名表_2026-03-09.xlsx  报名表_2026-03-16.xlsx  报名表_2026-03-23.xlsx  报名表_2026-03-30.xlsx  报名表_2026-04-06.xlsx  报名表_2026-04-13.xlsx  报名表_2026-04-20.xlsx  报名表_2026-04-27.xlsx  报名表_2026-05-04.xlsx  报名表_2026-05-11.xlsx  报名表_2026-05-18.xlsx  报名表_2026-05-25.xlsx  报名表生成方案.md  签到表.xlsx
排阵/: LLM 排阵说明.md  README_LLM.md  excel_exporter.py  generate_llm_lineup.py  lineup_scheduler.py  llm_scheduler.py  run_comparison.py  test_tidb.py  tidb.txt  固定场次约束修复说明.md  对阵表.xlsx  对阵表_LLM.xlsx  对阵表_传统.xlsx  微信接龙.txt  排阵改进说明.md  日期显示功能说明.md  需求文档.md  项目结构说明.md
排阵/web/: index.html  (+1 more)
(+25 files in other folders)
